# Varun

./: .gitignore  app.js  index.html  pyrefly.toml  requirements.txt  style.css  vercel.json
api/: index.py
backend/: alembic.ini  pyproject.toml  pyrefly.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: .gitkeep  4513e3ddb0ee_initial_schema.py
backend/app/: main.py
backend/app/api/v1/: chat.py  ingest.py  reports.py
backend/app/core/: config.py  database.py
backend/app/db/: models.py  seed_gis.py
backend/app/schemas/: forecast.py
backend/app/services/decision/: decision_engine.py
backend/app/services/evaluation/: eval_service.py
backend/app/services/impact/: impact_engine.py
backend/app/services/ingest/: dqs.py  open_meteo.py  pdf_parser.py
backend/app/services/rag/: graph_repo.py  rag_engine.py
backend/app/services/reports/: reporter.py
backend/tests/: test_db_schemas.py  test_decision.py  test_geospatial_agent.py  test_ingest.py  test_rag.py  test_reports.py
infra/docker/: docker-compose.yml
