[tool.poetry]
name = "project-varun-backend"
version = "0.1.0"
description = "AI-powered Weather Intelligence and Disaster Decision Support Backend"
authors = ["Varun Team"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = "^0.28.0"
pydantic = "^2.6.4"
pydantic-settings = "^2.2.1"
sqlalchemy = {version = "^2.0.28", extras = ["asyncio"]}
asyncpg = "^0.29.0"
psycopg2-binary = "^2.9.9"
alembic = "^1.13.1"
celery = "^5.3.6"
redis = "^5.0.3"
vertexai = "^1.43.0"
google-cloud-aiplatform = "^1.43.0"
pdfplumber = "^0.11.0"
httpx = "^0.27.0"
reportlab = "^4.1.0"
geoalchemy2 = "^0.14.0"
python-jose = {version = "^3.3.0", extras = ["cryptography"]}
passlib = {version = "^1.7.4", extras = ["bcrypt"]}
python-multipart = "^0.0.9"
structlog = "^24.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-asyncio = "^0.23.5"
black = "^24.2.0"
ruff = "^0.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.black]
line-length = 88
target-version = ['py311']
